# vote

./: .gitignore  Makefile  README.md  TODO.md
apps/backend/: .env.example  Cargo.toml  README.md
apps/backend/migrations/: 0001_init.sql  0002_contests.sql
apps/backend/src/: main.rs
apps/backend/src/api/: auth.rs  contests.rs  elections.rs  health.rs  mod.rs  pagination.rs  voter_roll_import.rs  votes.rs
apps/backend/src/config/: mod.rs
apps/backend/src/db/: mod.rs
apps/backend/src/domain/: mod.rs
apps/backend/src/errors/: mod.rs
apps/backend/src/middleware/: mod.rs
apps/backend/src/security/: jwt.rs  mod.rs  rate_limit.rs
apps/backend/src/services/: auth.rs  election.rs  mod.rs  vote.rs
apps/backend/src/state/: mod.rs
apps/frontend/: README.md  middleware.ts  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/(dashboard)/: layout.tsx
apps/frontend/components/auth/: login-form.tsx  otp-form.tsx  route-guard.tsx
apps/frontend/components/shell/: app-header.tsx
apps/frontend/components/theme/: theme-toggle.tsx
apps/frontend/components/ui/: button.tsx  card.tsx  checkbox.tsx  error-alert.tsx  input.tsx  label.tsx  skeleton.tsx  (+1 more)
apps/frontend/lib/: api.ts  auth.ts  error.ts  types.ts
docs/: DEMO_USECASES.md  NATIONAL_BULK_IMPORT.md
docs/examples/national_import/: candidates.csv  contests.csv  voter_rolls.csv
infra/: .env.example  docker-compose.yml
scripts/: bulk_import_national.sh  db_reset.sh  seed_demo.sh  seed_scenarios.sh  test_frontend_smoke.sh  test_integration.sh
(+9 files in other folders)
