[package]
name = "vote-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4.11"
anyhow = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"
futures-util = "0.3"
jsonwebtoken = "9"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
